# FtpServer

./: .gitignore  CLAUDE.md  LICENSE  README.md  Settings.py  UserList.py  file_version_info.txt  ftpServer.py  manifest.xml  myUtils.py  pyproject.toml  requirements.txt
mypyftpdlib/: authorizers.py  filesystems.py  handlers.py  ioloop.py  log.py  prefork.py  servers.py  utils.py
mypyftpdlib/handlers/: __init__.py
mypyftpdlib/handlers/ftp/: control.py  data.py  dispatchers.py  producers.py
mypyftpdlib/handlers/ftps/: control.py  data.py  ssl.py
