[project]
name = "ftpserver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "pyftpdlib==2.0.1",
    "pyopenssl>=25.3.0",
    "pystray>=0.19.5",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
    "pyinstaller>=6.16.0",
]
